--- a/doc/todos.org
+++ b/doc/todos.org
@@ -3,5 +3,6 @@
 - [ ] figure out errors when indexing from scratch
 - [ ] implement all-forms-facts, Q: are symbols fully namespaced?
 - [ ] API index tools.deps project instead of base-path
-- [ ] make it work with CLJS
-- [ ] add lein support
+- [X] make it work with CLJS
+- [ ] make it work with Clojure (:refer :all problem)
+- [X] add lein support
