--- a/doc/todos.org
+++ b/doc/todos.org
@@ -1,6 +1,6 @@
 - [X] scanner projects
 - [X] scanner namespaces
-- [ ] scanner separate ns priv and public vars with extension mechanism
+- [X] scanner separate ns priv and public vars with extension mechanism
 - [ ] indexer project facts
 - [ ] indexer file facts
 - [ ] indexer namespaces facts
